tests: fix sequence number generation
Because of incorrect number sequence generation by seq(1) on at least 32
bit ARM systems using coreutils v8.23/v8.24 we provide a minimal seq(1)
implementation that fits our needs.

This fixes the bug mentioned in the following mailing thread:

  https://groups.google.com/forum/#!topic/libseccomp/VtrClkXxLGA

Signed-off-by: Mathias Krause <minipli@googlemail.com>
[PM: subject line, build locations, and vertical whitespace tweaks]
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -26,6 +26,7 @@ util_la_LDFLAGS = -module
 TESTS = regression
 
 check_PROGRAMS = \
+	miniseq \
 	01-sim-allow \
 	02-sim-basic \
 	03-sim-basic_chains \
