--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,6 +1,7 @@
 *.bpf
 *.bpfd
 *.pfc
+miniseq
 util.pyc
 00-test.c
 00-test
@@ -32,3 +33,4 @@ util.pyc
 26-sim-arch_all_be_basic
 27-sim-bpf_blk_state
 28-sim-arch_x86
+
