arch: update s390/s390x system call tables
s390 and s390x gained quite a few new system calls:
- numa related system calls
- the separated socket system calls
- two more s390 specific pci mmio system calls

All architectures got the new membarrier and userfaultfd system calls.

This patch updates the s390 specific system call tables and updates other
architectures where needed.

Also remove some extra whitespace from the s390 specific system call tables.

Both 'make check' and './regression -T live' still work for s390 and s390x
after this update.

Signed-off-by: Heiko Carstens <heiko.carstens@de.ibm.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -1557,6 +1557,26 @@ int seccomp_export_bpf(const scmp_filter_ctx ctx, int fd);
 #define __NR_s390_runtime_instr		__PNR_s390_runtime_instr
 #endif /* __NR_s390_runtime_instr */
 
+#define __PNR_s390_pci_mmio_read	-10197
+#ifndef __NR_s390_pci_mmio_read
+#define __NR_s390_pci_mmio_read		__PNR_s390_pci_mmio_read
+#endif /* __NR_s390_pci_mmio_read */
+
+#define __PNR_s390_pci_mmio_write	-10198
+#ifndef __NR_s390_pci_mmio_write
+#define __NR_s390_pci_mmio_write	__PNR_s390_pci_mmio_write
+#endif /* __NR_s390_pci_mmio_write */
+
+#define __PNR_membarrier	-10199
+#ifndef __NR_membarrier
+#define __NR_membarrier		__PNR_membarrier
+#endif /* __NR_membarrier */
+
+#define __PNR_userfaultfd	-10200
+#ifndef __NR_userfaultfd
+#define __NR_userfaultfd	__PNR_userfaultfd
+#endif /* __NR_userfaultfd */
+
 #ifdef __cplusplus
 }
 #endif
