arch: move the low level filter rule addition code into the arch layer
The arch specific filter rewrite code is going to need to become more
complex so move the low level rule addition code directly into the
arch layer instead of the db layer, but still keep the tree manipulation
code in the db layer.

This patch also creates a new arch specific rule_add() function table
entry and allows for this function to create multiple rules from a
single rule.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,7 +21,11 @@ if ENABLE_PYTHON
 SUBDIRS += python
 endif
 
-SOURCES_ARCH = \
+SOURCES_ALL = \
+	api.c system.h system.c \
+	gen_pfc.h gen_pfc.c gen_bpf.h gen_bpf.c \
+	hash.h hash.c \
+	db.h db.c \
 	arch.c arch.h \
 	arch-x86.h arch-x86.c arch-x86-syscalls.c \
 	arch-x86_64.h arch-x86_64.c arch-x86_64-syscalls.c \
@@ -36,12 +40,6 @@ SOURCES_ARCH = \
 	arch-s390.h arch-s390.c arch-s390-syscalls.c \
 	arch-s390x.h arch-s390x.c arch-s390x-syscalls.c
 
-SOURCES_GEN = \
-	api.c system.h system.c \
-	db.h db.c \
-	hash.h hash.c \
-	gen_pfc.h gen_pfc.c gen_bpf.h gen_bpf.c
-
 EXTRA_DIST = arch-syscall-validate
 
 TESTS = arch-syscall-check
@@ -50,11 +48,11 @@ check_PROGRAMS = arch-syscall-check arch-syscall-dump
 
 lib_LTLIBRARIES = libseccomp.la
 
-arch_syscall_dump_SOURCES = arch-syscall-dump.c ${SOURCES_ARCH}
+arch_syscall_dump_SOURCES = arch-syscall-dump.c ${SOURCES_ALL}
 
-arch_syscall_check_SOURCES = arch-syscall-check.c ${SOURCES_ARCH}
+arch_syscall_check_SOURCES = arch-syscall-check.c ${SOURCES_ALL}
 
-libseccomp_la_SOURCES = ${SOURCES_GEN} ${SOURCES_ARCH}
+libseccomp_la_SOURCES = ${SOURCES_ALL}
 libseccomp_la_CPPFLAGS = ${AM_CPPFLAGS} -I$(top_builddir)/include
 libseccomp_la_CFLAGS = ${AM_CFLAGS} ${CFLAGS} -fPIC -DPIC -fvisibility=hidden
 libseccomp_la_LDFLAGS = ${AM_LDFLAGS} ${LDFLAGS} \
