build: fix a 'make dist' problem caused by a missing 00-test.c file
Reported-by: Marcus Meissner <meissner@suse.de>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -135,6 +135,7 @@ EXTRA_DIST = \
 	${EXTRA_DIST_TESTSCRIPTS} \
 	${EXTRA_DIST_TESTVALGRIND}
 
+nodist_00_test_SOURCES = 00-test.c
 EXTRA_PROGRAMS = 00-test
 
 check-build:
