--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -62,7 +62,8 @@ check_PROGRAMS = \
 	31-basic-version_check \
 	32-live-tsync_allow \
 	33-sim-socket_syscalls_be \
-	34-sim-basic_blacklist
+	34-sim-basic_blacklist \
+	35-sim-audit
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
@@ -99,7 +100,8 @@ EXTRA_DIST_TESTPYTHON = \
 	31-basic-version_check.py \
 	32-live-tsync_allow.py \
 	33-sim-socket_syscalls_be.py \
-	34-sim-basic_blacklist.py
+	34-sim-basic_blacklist.py \
+	35-sim-audit.py
 
 EXTRA_DIST_TESTCFGS = \
 	01-sim-allow.tests \
@@ -135,7 +137,8 @@ EXTRA_DIST_TESTCFGS = \
 	31-basic-version_check.tests \
 	32-live-tsync_allow.tests \
 	33-sim-socket_syscalls_be.tests \
-	34-sim-basic_blacklist.tests
+	34-sim-basic_blacklist.tests \
+	35-sim-audit.tests
 
 EXTRA_DIST_TESTSCRIPTS = regression testdiff testgen
 
