build: fix 'make distcheck'
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,7 @@ SUBDIRS = include src tools tests doc
 pkgconfdir = ${libdir}/pkgconfig
 pkgconf_DATA = libseccomp.pc
 
-EXTRA_DIST = CHANGELOG CREDITS LICENSE README SUBMITTING_PATCHES
+EXTRA_DIST = CHANGELOG CREDITS LICENSE README.md SUBMITTING_PATCHES
 
 # support silent builds
 AM_MAKEFLAGS_0 = --quiet --no-print-directory
