--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,8 +35,7 @@ SOURCES_ALL = \
 	arch-mips.h arch-mips.c arch-mips-syscalls.c \
 	arch-mips64.h arch-mips64.c arch-mips64-syscalls.c \
 	arch-mips64n32.h arch-mips64n32.c arch-mips64n32-syscalls.c \
-	arch-parisc.h arch-parisc.c arch-parisc-syscalls.c \
-	arch-parisc64.h arch-parisc64.c \
+	arch-parisc.h arch-parisc.c arch-parisc64.c arch-parisc-syscalls.c \
 	arch-ppc.h arch-ppc.c arch-ppc-syscalls.c \
 	arch-ppc64.h arch-ppc64.c arch-ppc64-syscalls.c \
 	arch-s390.h arch-s390.c arch-s390-syscalls.c \
