build: restore the '-static' linker flag for the test suite
Commit a69776395367 ("build: add basic code coverage support") added
support for code coverage but removed the '-static' linker flag from
the test directory which makes debugging tests much more difficult.
Unfortunately, we can't simply restore the '-static' linker flag as
it causes problems with the code coverage tools, so make it dependent
on the '--enable-code-coverage' configure flag.

Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,6 +18,14 @@
 
 @CODE_COVERAGE_RULES@
 
+if CODE_COVERAGE_ENABLED
+DBG_STATIC =
+else
+DBG_STATIC = -static
+endif
+
+AM_LDFLAGS = ${DBG_STATIC}
+
 LDADD = util.la ../src/libseccomp.la ${CODE_COVERAGE_LIBS}
 
 check_LTLIBRARIES = util.la
