--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -70,7 +70,8 @@ check_PROGRAMS = \
 	30-sim-socket_syscalls \
 	31-basic-version_check \
 	32-live-tsync_allow \
-	33-sim-socket_syscalls_be
+	33-sim-socket_syscalls_be \
+	35-sim-negative_one
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
@@ -106,7 +107,8 @@ EXTRA_DIST_TESTPYTHON = \
 	30-sim-socket_syscalls.py \
 	31-basic-version_check.py \
 	32-live-tsync_allow.py \
-	33-sim-socket_syscalls_be.py
+	33-sim-socket_syscalls_be.py \
+	35-sim-negative_one.py
 
 EXTRA_DIST_TESTCFGS = \
 	01-sim-allow.tests \
@@ -141,7 +143,8 @@ EXTRA_DIST_TESTCFGS = \
 	30-sim-socket_syscalls.tests \
 	31-basic-version_check.tests \
 	32-live-tsync_allow.tests \
-	33-sim-socket_syscalls_be.tests
+	33-sim-socket_syscalls_be.tests \
+	35-sim-negative_one.tests
 
 EXTRA_DIST_TESTSCRIPTS = regression testdiff testgen
 
