tests: add the syscall consistency check to the code coverage tests
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,9 +63,11 @@ script:
   - make clean && ./configure && scan-build --status-bugs make
   # limit the code coverage tests to the native/c code
   - make clean && ./configure --enable-code-coverage &&
+    make -C src check-code-coverage &&
     LIBSECCOMP_TSTCFG_TYPE=basic make check-code-coverage &&
     LIBSECCOMP_TSTCFG_TYPE=bpf-sim make check-code-coverage
 
 after_success:
   # https://github.com/eddyxu/cpp-coveralls/blob/master/README.md
-  - coveralls --gcov-options '\-lp' --exclude tests --exclude tools
+  - coveralls --gcov-options '\-lp'
+    --exclude tests --exclude tools --exclude src/arch-syscall-check.c
